# agent-rs

./: .gitignore  .mergify.yml  CHANGELOG.md  Cargo.toml  Cross.toml  README.md  default.nix  flake.nix  index.md  rust-toolchain  rust-toolchain.toml  shell.nix
.github/: CODEOWNERS  CONTRIBUTING.md
.github/workflows/: conventional-commits.yml  e2e.yml  fmt.yml  ic-ref.yml  icx_asset.yml  lint.yml  netlify.yml  provision-darwin.sh  provision-linux.sh  publish-crates.yml  publish.yml  release.yml  rust.yml  shellcheck.yml  test.yml
cargo-docs/: index.html
e2e/bash/: icx-asset-upload.bash  icx-asset.bash  icx.bash
e2e/bash/util/: assertions.bash
ic-agent/: CHANGELOG.md  Cargo.toml  README.adoc  README.md  build.rs  http_mock_service_worker.js
ic-agent-ifaces/: Cargo.toml  README.md
ic-agent-ifaces/src/: identity.rs  lib.rs  signature.rs
ic-agent/benches/: perf_route_provider.rs
ic-agent/src/: demo_1_fetch_nodes.rs  demo_2_fetch_nodes_via_api.rs  demo_3_dynamic_routing.rs  demo_4_dynamic_routing.rs  export.rs  hash_tree.rs  k_top_route.rs  lib.rs  macros.rs  util.rs
ic-agent/src/agent/: agent_config.rs  agent_error.rs  agent_test.rs  builder.rs  http_facade.rs  http_transport.rs  mod.rs  nonce.rs  replica_api.rs  response.rs  response_authentication.rs  route_provider.rs  signed.rs  status.rs  subnet.rs
ic-agent/src/agent/http_transport/: hyper_transport.rs  mod.rs  reqwest_transport.rs  route_provider.rs
ic-agent/src/agent/http_transport/dynamic_routing/: dynamic_route_provider.rs  health_check.rs  messages.rs  mod.rs  node.rs  nodes_fetch.rs  test_utils.rs  type_aliases.rs
ic-agent/src/agent/http_transport/dynamic_routing/snapshot/: latency_based_routing.rs  mod.rs  round_robin_routing.rs  routing_snapshot.rs
ic-agent/src/agent/route_provider/dynamic_routing/: dynamic_route_provider.rs  health_check.rs  messages.rs  mod.rs  node.rs  nodes_fetch.rs  test_utils.rs  type_aliases.rs
ic-agent/src/agent/route_provider/dynamic_routing/snapshot/: latency_based_routing.rs  mod.rs  round_robin_routing.rs  routing_snapshot.rs
ic-agent/src/bls/: README.md  aes.rs  gcm.rs  hash256.rs  hash384.rs  hash512.rs  hmac.rs  mod.rs  nhs.rs  rand.rs  sha3.rs  share.rs
ic-agent/src/bls/bls12381/: big.rs  bls.rs  dbig.rs  ecdh.rs  ecp.rs  ecp2.rs  fp.rs  fp12.rs  fp2.rs  fp4.rs  hpke.rs  mpin.rs  pair.rs  rom.rs
ic-agent/src/canister/: management_canister.rs  mod.rs
ic-agent/src/hash_tree/: hash_tree_tests.rs  mod.rs  tests.rs
ic-agent/src/identity/: anonymous.rs  basic.rs  delegated.rs  delegation.rs  dummy.rs  error.rs  hardware.rs  info_aware.rs  mod.rs  prime256v1.rs  secp256k1.rs  secp256r1.rs
ic-agent/src/request_id/: error.rs  mod.rs
ic-agent/src/types/: canister_attributes.rs  mod.rs  request_id.rs  request_id_error.rs  status.rs
ic-agent/tests/: crypto_provider_default.rs  crypto_provider_idempotent.rs  crypto_provider_neither.rs  ic-ref.rs
ic-agent/tests/ic_ref/: mod.rs  status.rs  utils.rs
ic-agent/tests/universal_canister/: mod.rs
ic-asset/: Cargo.toml  README.md
ic-asset/src/: asset_config.rs  content.rs  convenience.rs  http_headers_config.rs  lib.rs  operations.rs  params.rs  plumbing.rs  retryable.rs  sync.rs  upload.rs
ic-asset/src/asset_canister/: batch.rs  chunk.rs  list.rs  mod.rs  protocol.rs
ic-asset/tests/assets/example_project_assets_with_hidden_dir_included/: .ic-assets.json  index.html
ic-asset/tests/assets/example_project_assets_with_hidden_dir_included/.well-known/: .ic-assets.json
ic-asset/tests/assets/example_project_assets_with_hidden_dir_not_included/: .ic-assets.json
ic-certification/: Cargo.toml  README.md
ic-certification/src/: certificate.rs  lib.rs
ic-certification/src/hash_tree/: mod.rs  tests.rs
ic-identity-hsm/: Cargo.toml  README.md
ic-identity-hsm/src/: hardware.rs  hsm.rs  lib.rs
ic-transport-types/: Cargo.toml
ic-transport-types/src/: lib.rs  request_id.rs  signed.rs
ic-transport-types/src/request_id/: error.rs
ic-types/: Cargo.toml  README.md
ic-types/src/: hash_tree.rs  lib.rs  principal.rs
ic-types/src/hash_tree/: hash_tree_tests.rs  mod.rs  tests.rs
ic-utils/: Cargo.toml  README.md
ic-utils-bindgen/: Cargo.toml
ic-utils-bindgen-tests/: Cargo.toml  base.toml  build.rs  icrc1.did  icrc1_ref.wasm  test_identity.pem
ic-utils-bindgen-tests/src/: lib.rs
ic-utils-bindgen-tests/tests/: bindgen_tests.rs
ic-utils-bindgen/src/: lib.rs
ic-utils-bindgen/src/templates/: runtime_callee.hbs  static_callee.hbs  types_only.hbs
ic-utils/src/: call.rs  canister.rs  canisters.rs  error.rs  interfaces.rs  lib.rs
ic-utils/src/call/: expiry.rs
ic-utils/src/canisters/: management_canister.rs
ic-utils/src/interfaces/: bitcoin_canister.rs  http_request.rs  management_canister.rs  wallet.rs
ic-utils/src/interfaces/management_canister/: attributes.rs  builders.rs  serde_impls.rs
ic-wasm/: Cargo.toml  README.md
ic-wasm/src/: metadata.rs
ice/: Cargo.toml  README.md
ice/src/: main.rs
icx/: Cargo.toml  README.md  build.rs
icx-asset/: Cargo.toml  README.md
icx-asset/src/: main.rs
icx-asset/src/commands/: list.rs  mod.rs  sync.rs  upload.rs
icx-cert/: Cargo.toml  README.md
icx-cert/src/: main.rs  pprint.rs
icx-http-server/: Cargo.toml
icx-http-server/src/: main.rs
icx-proxy/: Cargo.toml  README.md
icx-proxy/src/: dns_aliases.rs  logging.rs  main.rs
icx-proxy/src/config/: canister_dns_config.rs  canister_dns_rule.rs  dns_alias.rs  dns_canister_config.rs  dns_canister_rule.rs  mod.rs
icx-wasm/: Cargo.toml  README.md
icx-wasm/src/: main.rs
icx/src/: main.rs
ref-tests/: Cargo.toml
ref-tests/canisters/: cycles-wallet.wasm
ref-tests/src/: lib.rs  universal_canister.rs  utils.rs
ref-tests/tests/: ic-ref.rs  integration.rs
scripts/: cargo_publish.sh  download_reftest_assets.sh
zzz-release/: Cargo.toml
zzz-release/src/: main.rs
