[workspace]
resolver = "2"
members = [
    "ic-agent",
    "icx-cert",
    "ic-identity-hsm",
    "ic-utils",
    "ic-transport-types",
    "icx",
    "ref-tests",
]

[workspace.package]
version = "0.40.1"
authors = ["DFINITY Stiftung <sdk@dfinity.org>"]
edition = "2021"
repository = "https://github.com/dfinity/agent-rs"
# MSRV
# Avoid updating this field unless we use new Rust features
# Sync rust-version in rust-toolchain.toml
rust-version = "1.78.0"
license = "Apache-2.0"

[workspace.lints.clippy]
needless_lifetimes = "allow"

[workspace.dependencies]
ic-agent = { path = "ic-agent", version = "0.40.1", default-features = false }
ic-utils = { path = "ic-utils", version = "0.40.1" }
ic-transport-types = { path = "ic-transport-types", version = "0.40.1" }

ic-certification = "3"
candid = "0.10.10"
candid_parser = "0.1.4"
clap = "4.5.21"
ed25519-consensus = "2.1.0"
futures-util = "0.3.31"
hex = "0.4.3"
ic-ed25519 = "0.2"
k256 = "0.13.4"
leb128 = "0.2.5"
pocket-ic = "6.0.0"
p256 = "0.13.2"
rand = "0.8.5"
reqwest = { version = "0.12", default-features = false }
serde = "1.0.215"
serde_bytes = "0.11.15"
serde_cbor = "0.11.2"
serde_json = "1.0.133"
serde_repr = "0.1.19"
sha2 = "0.10.8"
thiserror = "2.0.3"
time = "0.3"
tokio = { version = "1.41.1", default-features = false }
