[workspace]
resolver = "2"
members = [
    "ic-agent",
    "ic-identity-hsm",
    "ic-transport-types",
    "ic-utils",
    "ic-utils-bindgen",
    "ic-utils-bindgen-tests",
    "icx",
    "icx-cert",
    "ref-tests",
]

[workspace.package]
version = "0.47.1"
authors = ["DFINITY Stiftung <sdk@dfinity.org>"]
edition = "2021"
repository = "https://github.com/dfinity/agent-rs"
# MSRV
# Avoid updating this field unless we use new Rust features
# Sync rust-version in rust-toolchain.toml
rust-version = "1.88.0"
license = "Apache-2.0"

[workspace.dependencies]
# Dependency strategy:
# - All dependency versions are defined here. Crate Cargo.toml files must always use `dep.workspace = true`.
# - Features are defined here only when multiple crates share the exact same feature set (annotated with
#   a comment listing those crates). Otherwise, features are declared in the individual crate Cargo.toml.
#
# The path dependencies below ensure all workspace members use the same version of internal crates.
ic-agent = { path = "ic-agent", version = "0.47.1", default-features = false }
ic-identity-hsm = { path = "ic-identity-hsm", version = "0.47.1" }
ic-transport-types = { path = "ic-transport-types", version = "0.47.1" }
ic-utils = { path = "ic-utils", version = "0.47.1" }
ic-utils-bindgen = { path = "ic-utils-bindgen" }
ref-tests = { path = "ref-tests" }

# Public dependencies
anyhow = { version = "1.0", features = ["backtrace"] }                 # icx, icx-cert
arc-swap = "1.7"
async-channel = "2.5"
async-lock = "3.4"
async-trait = "0.1"
async-watch = "0.3"
backoff = "0.4.0"
base64 = "0.22"
bytes = "1.11"
cached = { version = "0.56", default-features = false }
candid = "0.10.10"
candid_parser = "0.3.0"
clap = { version = "4.5.21", features = ["derive", "cargo", "color"] } # icx, icx-cert
der = "0.8.0"
ecdsa = "0.16"
ed25519-consensus = "2.1.0"
elliptic-curve = "0.13"
futures-util = "0.3.31"
getrandom = "0.4"
hex = "0.4.3"
http = "1.0.0"
http-body = "1.0.0"
http-body-util = "0.1.3"
humantime = "2.0.1"
ic-certification = "3"
ic-ed25519 = "0.6.0"
ic-management-canister-types = "0.7.1"
ic_principal = { version = "0.1.2", features = ["rangemap"] }
ic-verify-bls-signature = "0.6"
js-sys = "0.3"
k256 = "0.13.4"
leb128 = "0.2.5"
mockito = "1.0.2"
once_cell = "1.10.0"
p256 = "0.13.2"
pem = "3"
pkcs11 = "0.5.0"
pkcs8 = "0.10.2"
pocket-ic = "12.0.0"
rand = "0.10.0"
rangemap = "1.7"
reqwest = { version = "0.13.2", default-features = false }
ring = "0.17"
sec1 = "0.7.2"
semver = "1.0.7"
serde = "1.0.215"
serde_bytes = "0.11.15"
serde_cbor = "0.11.2"
serde_json = "1.0.133"
serde_repr = "0.1.19"
sha2 = "0.10.8"
simple_asn1 = "0.6.0"
stop-token = "0.7"
strum = "0.28.0"
strum_macros = "0.28.0"
thiserror = "2.0.3"
time = "0.3"
tokio = { version = "1.50.0", default-features = false }
tower-service = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-bindgen-test = "0.3.34"
web-sys = "0.3"
