[package]
name = "ic-agent-ifaces"
version = "0.1.0"
authors = ["DFINITY Stiftung <sdk@dfinity.org>"]
edition = "2018"
homepage = "https://docs.rs/ic-identity-hsm"
documentation = "https://docs.rs/ic-identity-hsm"
license = "Apache-2.0"
readme = "README.md"
categories = ["api-bindings", "data-structures", "no-std"]
keywords = ["internet-computer", "agent", "utility", "icp", "dfinity"]
include = ["src", "Cargo.toml", "../LICENSE", "README.md"]

[dependencies]
ic-types = "0.2.2"
