[package]
name = "ic-asset"
version = "0.12.2"
authors = ["DFINITY Stiftung <sdk@dfinity.org>"]
edition = "2018"
description = "Library for storing files in an asset canister."
homepage = "https://docs.rs/ic-asset"
documentation = "https://docs.rs/ic-asset"
license = "Apache-2.0"
readme = "README.md"
categories = ["api-bindings", "data-structures"]
keywords = ["internet-computer", "assets", "icp", "dfinity"]
include = ["src", "Cargo.toml", "../LICENSE", "README.md"]

[dependencies]
anyhow = "1.0"
candid = "0.7.10"
flate2 = "1.0.22"
futures = "0.3.19"
futures-intrusive = "0.4.0"
garcon = { version = "0.2", features = ["async"] }
hex = {version = "0.4.2", features = ["serde"] }
ic-agent = { path = "../ic-agent", version = "0.12", features = [ "pem" ] }
ic-types = "0.3.0"
ic-utils = { path = "../ic-utils", version = "0.12" }
mime = "0.3.16"
mime_guess = "2.0.3"
openssl = "0.10.38"
serde = "1.0"
serde_bytes = "0.11.2"
walkdir = "2.2.9"

[dev-dependencies]
mockito = "0.30.0"
proptest = "1.0.0"

