[package]
name = "ic-certification"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Types related to the Internet Computer Public Specification."
documentation = "https://docs.rs/ic-certification"
readme = "README.md"
categories = ["api-bindings", "data-structures", "no-std"]
keywords = ["internet-computer", "agent", "utility", "icp", "dfinity"]
include = ["src", "Cargo.toml", "../LICENSE", "README.md"]

[dependencies]
hex = "0.4.3"
sha2 = "0.10.1"

[dev-dependencies]
serde = { version = "1.0.133", features = ["derive"] }
serde_cbor = "0.11.2"

[dependencies.serde]
version = "1.0.115"
features = ["derive"]
optional = true

[dependencies.serde_bytes]
version = "0.11.5"
optional = true

[features]
# Default features include serde support.
default = ['serde', 'serde_bytes']
