[package]
name = "ic-certification"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Types related to the Internet Computer Public Specification."
documentation = "https://docs.rs/ic-certification"
readme = "README.md"
categories = ["api-bindings", "data-structures", "no-std"]
keywords = ["internet-computer", "agent", "utility", "icp", "dfinity"]
include = ["src", "Cargo.toml", "../LICENSE", "README.md"]

[dependencies]
hex = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
serde = { workspace = true, features = ["derive"] }
serde_cbor = { workspace = true }

[dependencies.serde]
workspace = true
features = ["derive"]
optional = true

[dependencies.serde_bytes]
workspace = true
optional = true

[features]
# Default features include serde support.
default = ['serde', 'serde_bytes']
