[package]
name = "ic-identity-hsm"
version = "0.17.0"
authors = ["DFINITY Stiftung <sdk@dfinity.org>"]
description = "Identity implementation for HSM for the ic-agent package."
homepage = "https://docs.rs/ic-identity-hsm"
documentation = "https://docs.rs/ic-identity-hsm"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
categories = ["api-bindings", "data-structures", "no-std"]
keywords = ["internet-computer", "agent", "utility", "icp", "dfinity"]
include = ["src", "Cargo.toml", "../LICENSE", "README.md"]
rust-version = "1.58.1"

[dependencies]
hex = "0.4.2"
ic-agent = { path = "../ic-agent", version = "0.17", features = [ "pem" ] }
num-bigint = "0.4.3"
pkcs11 = "0.5.0"
sha2 = "0.10"
simple_asn1 = "0.6.0"
thiserror = "1.0.20"
