[package]
name = "ic-identity-hsm"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Identity implementation for HSM for the ic-agent package."
homepage = "https://docs.rs/ic-identity-hsm"
documentation = "https://docs.rs/ic-identity-hsm"
readme = "README.md"
categories = ["api-bindings", "data-structures", "no-std"]
keywords = ["internet-computer", "agent", "utility", "icp", "dfinity"]
include = ["src", "Cargo.toml", "../LICENSE", "README.md"]

[dependencies]
hex = "0.4.2"
ic-agent = { path = "../ic-agent", version = "0.23", features = [ "pem" ], default-features = false}
num-bigint = "0.4.3"
pkcs11 = "0.5.0"
sha2 = "0.10"
simple_asn1 = "0.6.0"
thiserror = "1.0.20"

[dev-dependencies]
ic-agent = { path = "../ic-agent", version = "0.23", features = ["reqwest"] }
