[package]
name = "ic-identity-hsm"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Identity implementation for HSM for the ic-agent package."
homepage = "https://docs.rs/ic-identity-hsm"
documentation = "https://docs.rs/ic-identity-hsm"
readme = "README.md"
categories = ["api-bindings", "data-structures", "no-std"]
keywords = ["internet-computer", "agent", "utility", "icp", "dfinity"]
include = ["src", "Cargo.toml", "../LICENSE", "README.md"]

[dependencies]
hex = { workspace = true }
ic-agent = { workspace = true, default-features = false }
pkcs11 = "0.5.0"
sha2 = { workspace = true }
simple_asn1 = "0.6.0"
thiserror = { workspace = true }

[dev-dependencies]
ic-agent = { workspace = true, features = ["reqwest"] }
