[package]
name = "ic-types"
version = "0.1.4"
authors = ["DFINITY Stiftung <sdk@dfinity.org>"]
edition = "2018"
description = "Types related to the Internet Computer Public Specification."
homepage = "https://docs.rs/ic-types"
documentation = "https://docs.rs/ic-types"
license = "Apache-2.0"
readme = "README.md"
categories = ["api-bindings", "data-structures", "no-std"]
keywords = ["internet-computer", "types", "dfinity"]
include = ["src", "Cargo.toml", "LICENSE", "README.md"]

[dependencies]
base32 = "0.4.0"
crc32fast = "1.2.0"
hex = "0.4.3"
sha2 = "0.9.1"
thiserror = "1.0.20"

[dev-dependencies]
serde = { version = "1.0.115", features = ["derive"] }
serde_cbor = "0.11.1"
serde_json = "1.0.57"

[dependencies.serde]
version = "1.0.115"
features = ["derive"]
optional = true

[dependencies.serde_bytes]
version = "0.11.5"
optional = true

[features]
# Default features include serde support.
default = ['serde', 'serde_bytes']
