[package]
name = "ic-utils-bindgen-tests"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
ic-agent = { workspace = true, features = ["pem"] }
ic-utils.workspace = true
candid.workspace = true
pocket-ic.workspace = true
serde.workspace = true
tokio.workspace = true

[build-dependencies]
ic-utils-bindgen = { path = "../ic-utils-bindgen" }
candid.workspace = true
