[package]
name = "ic-utils-bindgen-tests"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
candid.workspace = true
ic-agent = { workspace = true, features = ["pem"] }
ic-utils.workspace = true
pocket-ic.workspace = true
serde.workspace = true
tokio.workspace = true

[build-dependencies]
candid.workspace = true
ic-utils-bindgen = { workspace = true }

[dev-dependencies]
ref-tests.workspace = true

[lints]
workspace = true
