[package]
name = "ic-utils-bindgen"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Internet Computer Binding Generator."
readme = "README.md"
categories = ["api-bindings"]
keywords = ["internet-computer", "types", "dfinity", "agent"]
include = ["src", "Cargo.toml", "LICENSE", "README.md"]

[dependencies]
candid.workspace = true
candid_parser.workspace = true
thiserror.workspace = true
