[package]
name = "ic-utils"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Collection of utilities for Rust, on top of ic-agent, to communicate with the Internet Computer, following the Public Specification."
homepage = "https://docs.rs/ic-utils"
documentation = "https://docs.rs/ic-utils"
readme = "README.md"
categories = ["api-bindings", "data-structures", "no-std"]
keywords = ["internet-computer", "agent", "utility", "icp", "dfinity"]
include = ["src", "Cargo.toml", "../LICENSE", "README.md"]

[dependencies]
async-trait = "0.1.68"
candid = { workspace = true, features = ["value"] }
futures-util = { workspace = true }
ic-agent = { workspace = true, default-features = false }
serde = { workspace = true }
serde_bytes = { workspace = true }
sha2 = { workspace = true }
strum = "0.26"
strum_macros = "0.26"
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
semver = "1.0.7"
once_cell = "1.10.0"

[dev-dependencies]
ed25519-consensus = { workspace = true }
ic-agent = { workspace = true, default-features = true }
pocket-ic = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[features]
raw = []

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]
rustdoc-args = ["--cfg=docsrs"]
features = ["raw"]
