[package]
name = "ic-utils"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Collection of utilities for Rust, on top of ic-agent, to communicate with the Internet Computer, following the Public Specification."
homepage = "https://docs.rs/ic-utils"
documentation = "https://docs.rs/ic-utils"
readme = "README.md"
categories = ["api-bindings", "data-structures"]
keywords = ["internet-computer", "agent", "utility", "icp", "dfinity"]
include = ["src", "Cargo.toml", "../LICENSE", "README.md"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]
features = ["raw", "wasm-bindgen"]

[features]
raw = []
wasm-bindgen = ["ic-agent/wasm-bindgen"]

[dependencies]
async-trait = { workspace = true }
candid = { workspace = true, features = ["value"] }
futures-util = { workspace = true }
ic-agent = { workspace = true, default-features = false }
ic-management-canister-types = { workspace = true }
once_cell = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
sha2 = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }

[dev-dependencies]
ic-agent = { workspace = true, default-features = true }
ic-ed25519 = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[target.'cfg(unix)'.dev-dependencies]
ref-tests = { workspace = true }

[lints]
workspace = true
