[package]
name = "icx-asset"
version = "0.1.0"
authors = ["DFINITY Stiftung <sdk@dfinity.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
delay = "0.3.1"
ic-agent = { path = "../ic-agent", version = "0.2" }
ic-types = { path = "../ic-types", version = "0.1" }
ic-utils = { path = "../ic-utils", version = "0.2" }
pem = "0.8.1"
serde = "1.0.115"
serde_json = "1.0.57"
tokio = { version = "1.2.0", features = ["full"] }
thiserror = "1.0.24"
walkdir = "2.3.1"
